# sphinx-build-compatibility

./: README.md  pyproject.toml
sphinx_build_compatibility/: extension.py  utils.py
