[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "sphinx-build-compatibility"
authors = [
    {name = "Manuel Kaufmann", email = "humitos@gmail.com"}
]
description = "Sphinx extension to keep Read the Docs compatibility"
keywords=[
    "read-the-docs",
    "compatibility",
]
dependencies = [
    "sphinx>=5",
    "requests",
    # TODO: do we need this extension for some reason?
    # "readthedocs-sphinx-ext",
]
version = "0.0.1"
readme = "README.md"
requires-python = ">=3.8"
license = {file = "LICENSE"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: Sphinx",
    "Framework :: Sphinx :: Extension",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Documentation :: Sphinx",
    "Topic :: Software Development :: Documentation",
]

[project.optional-dependencies]
test = [
    "tox",
]

doc = [
    "sphinx-rtd-theme",
    "sphinx-autoapi",
]

[project.urls]
Documentation = "https://sphinx-build-compatibility.readthedocs.io/"
Source = "https://github.com/readthedocs/sphinx-build-compatibility"
Tracker = "https://github.com/readthedocs/sphinx-build-compatibility/issues"

[tool.flit.module]
name = "sphinx_build_compatibility"

[tool.flit.sdist]
exclude = [
  "common",
  "tests",
  ".circleci",
  ".github",
  ".gitignore",
  ".readthedocs.yaml",
  "pytest.ini",
  "conftest.py",
  "tox.ini",
]

[tool.bumpver]
current_version = "0.0.1"
version_pattern = "MAJOR.MINOR.PATCH[PYTAGNUM]"
commit_message = "Release {new_version}"
commit = true
tag = true
push = true

[tool.bumpver.file_patterns]
"pyproject.toml" = [
    'version = "{version}"',
]
"sphinx_build__compatibility/__init__.py" = [
    '__version__ = "{version}"',
]